--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p>Hello, everyon! </p>
+<p>Hello, everyone! </p>
 <p>This is Xinhui. Welcome to my personal page! </p>
 <p>It's nice meeting you and you may reach out to me via links below </p>
 
