--- a/index.html
+++ b/index.html
@@ -1,8 +1,83 @@
-<p>Hello, everyone!</p>
-<p>This is Xinhui. Welcome to my personal page! </p>
-<p>It's nice meeting you and you may reach out to me via links below </p>
-
-<ul>
-  <li> <a href="https://www.linkedin.com/in/xinhui-yang-05920b11b/">LinkedIn</a> </li>
-  <li> <a href="http://xinhui-yang.com">My creative page</a> </li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Xinhui's Personal Page</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #50b3a2;
+            color: #ffffff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #e8491d 3px solid;
+        }
+        header a {
+            color: #ffffff;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+        header ul {
+            padding: 0;
+            list-style: none;
+        }
+        header li {
+            display: inline;
+            padding: 0 20px 0 20px;
+        }
+        header #branding {
+            float: left;
+        }
+        header #branding h1 {
+            margin: 0;
+        }
+        header nav {
+            float: right;
+            margin-top: 10px;
+        }
+        header .highlight, header .current a {
+            color: #e8491d;
+            font-weight: bold;
+        }
+        header a:hover {
+            color: #ffffff;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div id="branding">
+                <h1>Xinhui's Personal Page</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li class="current"><a href="https://www.linkedin.com/in/xinhui-yang-05920b11b/">LinkedIn</a></li>
+                    <li><a href="http://xinhui-yang.com">Creative Page</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
+    <div class="container">
+        <p>Hello, everyone!</p>
+        <p>This is Xinhui. Welcome to my personal page!</p>
+        <p>It's nice meeting you, and you may reach out to me via the links above.</p>
+    </div>
+</body>
+</html>
