--- a/index.html
+++ b/index.html
@@ -61,41 +61,9 @@
             </nav>
         </div>
     </header>
-
-
-</head>
-<body>
-    <div id="fortune-container">
-        <!-- The fortune will be displayed here -->
-    </div>
-
-    <script>
-        // An array of fortunes
-        const fortunes = [
-            "Even you, in your finite wisdom, should be able to prove this without me holding your hand.",
-            "Do not worry about your difficulties in Mathematics. I can assure you mine are still greater. -Einstein",
-            "The essence of mathematics is not to make simple things complicated, but to make complicated things simple. -S. Gudder",
-            // ... more fortunes
-        ];
-
-        // Function to get a random fortune
-        function getRandomFortune() {
-            const index = Math.floor(Math.random() * fortunes.length);
-            return fortunes[index];
-        }
-
-        // Function to display a random fortune
-        function displayFortune() {
-            const fortuneContainer = document.getElementById('fortune-container');
-            fortuneContainer.textContent = getRandomFortune();
-        }
-
-        // Call displayFortune on page load
-        displayFortune();
-    </script>
-</body>
-
     
+    $ git clone https://github.com/maxieds/math-fortune-mod.git
+    $ cd math-fortune-mod
     
     <section class="container content">
         <p>Hello, everyone!</p>
