--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 <!DOCTYPE html>
+
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Personal Page</title>
+</head>
+<body>
+    <div id="fortune-container">
+        <!-- Fortune will be displayed here -->
+    </div>
+
+    <script src="math-fortunes.js"></script>
+</body>
+</html>
+
+
+
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
