--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </body>
 </html>
 
-
-
+<a href="https://github.com/maxieds/math-fortune-mod">math.fortunes</a> | cowsay -f
 
 <html lang="en">
 <head>
