--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Page</title>
+    <title>Math Fortunes</title>
+    <!-- Add link to your CSS here if needed -->
 </head>
 <body>
-    <div id="fortune-container">
-        <!-- Fortune will be displayed here -->
+    <div id="fortune-display">
+        <!-- Random fortune will be displayed here -->
     </div>
-
-    <script src="math-fortunes.js"></script>
+    <script src="fortunes.js"></script>
 </body>
 </html>
+
 
 <a href="https://github.com/maxieds/math-fortune-mod">math.fortunes</a> | cowsay -f
 
