--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1>Xinhui Yang</h1>
             <nav>
                 <a href="#">Home</a>
-                <a href="http://xinhui-yang.com">Art</a>
+                <a href="https://www.figma.com/file/TSiJINDAnwtJ3IdgVk9Sw0/Lab-web?type=design&node-id=0%3A1&mode=design&t=qL2hn4Ix1bUWopfu-1m">Art</a>
             </nav>
         </div>
     </header>
