--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="container content">
         <p>Hi, welcome to my space!</p>
         <p>I'm a PhD student at LSU Health Science Center. My research interests include women's health, nutrition, and Alzheimer's disease.</p>
-        <p>In my spare time, I'd like to do some workout, boxing, cardio, and reading.</p>
+        <p>In my spare time, I'd like to do some workouts, boxing, cardio, and reading.</p>
         <p>Slash, you are also welcome to consult me if you have any specific, relevant, or irrelevant questions for me.</p>
         <p>You may reach out to me via the links below.</p>
         <div class="contact-links">
