--- a/index.html
+++ b/index.html
@@ -68,12 +68,17 @@
         width: 25%;
     }
     </style>
-
     
-    <div class="container">
-        <img src="images/my-photo1.jpg" alt="A photo of me and my cat" class="profile-picture">
+    <div class="container content">
+        <div class="profile-flex-container">
+            <img src="images/my-photo.jpg" alt="A photo of me and my cat" class="profile-picture">
+            <div class="profile-details">
+                <p>Programming languages: R, Python</p>
+                <p>Hobbies: reading,boxing, and multiple sports except for swimming</p>
+            </div>
+        </div>
         <!-- Rest of the content -->
-    </div>
+</div>
     
     <section class="container content">
         <p>Hi, welcome to my space!</p>
