--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
     img {
         width: 25%;  /* Resize to 25% of the current width */
         float: left; /* Align the image to the left */
-        margin-bottom: 20px; /* Add space between the image and the content */
-        margin-left: 80px; /* Add space below the image */
+        margin-bottom: 10px; /* Add space between the image and the content */
+        margin-left: 60px; /* Add space below the image */
     }
     
     .container {
         max-width: 800px;
         margin: 40px auto;
-        padding: 0 20px;
-        overflow: auto; /* Clear the float */
+        padding: 5 20px;
+        overflow: auto;
     }
     
     </style>
