--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
     img {
         width: 25%;  /* Resize to 25% of the current width */
         float: left; /* Align the image to the left */
-        margin-bottom: 10px; /* Add space between the image and the content */
-        margin-left: 60px; /* Add space below the image */
+        margin-bottom: 5px; /* Add space between the image and the content */
+        margin-left: 40px; 
+        margin-right: 20px; 
     }
     
     .container {
