--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="profile-details">
                 <p>Programming languages: R, Python</p>
                 <p>Hobbies: Reading, boxing, and multiple sports except for swimming</p>
-                <p>Experience: I spent 18 years in my motherland, China. Then, I spent four years at UC Davis in California, another four years at Brown University in Providence, and probably the last four years at LSUHSC in Nola. During my master's, the global pandemic happened, and I got to work/intern for two years. I interned in several careers that sound impressive: consulting at EY, investment banking at China Securities, and investment analysis at Jenscare Scientific. I love every job I've done and every experience I've been through. </p>
+                <p>Experience: I spent 18 years in my motherland, China. Then, I spent four years at UC Davis in California, another four years at Brown University in Providence, and probably the last four years at LSUHSC in Nola.</p>
             </div>
         </div>
         <!-- Rest of the content -->
