--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     
     <section class="container content">
         <p>Hi, welcome to my space!</p>
-        <p>I'm a PhD student at LSU Health Science Center. My research interests include women's health, nutrition, and Alzheimer's disease.</p>
+        <p>I'm a PhD student at LSU Health Science Center studying Epidemiology. My research interests include women's health (e.g., breast cancer), nutrition, and Alzheimer's disease.</p>
         <p>In my spare time, I'd like to do some workouts, boxing, cardio, and reading. Last summer, I got my motorcycle driver's license, and I'm looking forward to getting a new bike. What else...See my random posts on my creative page. So this is a brief about me, a human being with an 85-year-old soul stuck in a 20+ body. </p>
         <p>Slash, you are also welcome to consult me if you have any specific, relevant, or irrelevant questions for me.</p>
         <p>You may reach out to me via the links below.</p>
