--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="https://www.figma.com/proto/7qexKxLzNiWp3yg3f5hRxb/STCEO?node-id=1-11">Art</a>
+                <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">Spatial Analysis</a>
             </nav>
         </div>
     </header>
