--- a/index.html
+++ b/index.html
@@ -58,11 +58,17 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="https://www.figma.com/proto/7qexKxLzNiWp3yg3f5hRxb/STCEO?node-id=1-11">Art</a>
-                <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">Spatial Analysis</a>
+                <div class="dropdown">
+                    <a href="#">Storymaps</a>
+                    <div class="dropdown-content">
+                        <a href="https://storymaps.arcgis.com/stories/e74b8a600a324502a80792c43fdf5f39">COVID19 Spread Path in Louisiana</a>
+                        <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">COVID19 Pattern Overview</a>
+                    </div>
+                </div>
             </nav>
         </div>
     </header>
-
+  
 
     <style>
     img {
