--- a/index.html
+++ b/index.html
@@ -53,21 +53,82 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Xinhui Yang</h1>
-            <nav>
-                <a href="#">Home</a>
-                <a href="https://www.figma.com/proto/7qexKxLzNiWp3yg3f5hRxb/STCEO?node-id=1-11">Art</a>
-                <div class="dropdown">
-                    <a href="#">Storymaps</a>
-                    <div class="dropdown-content">
-                        <a href="https://storymaps.arcgis.com/stories/e74b8a600a324502a80792c43fdf5f39">COVID19 Spread Path in Louisiana</a>
-                        <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">COVID19 Pattern Overview</a>
-                    </div>
+    <div class="container">
+        <h1>Xinhui Yang</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="https://www.figma.com/proto/7qexKxLzNiWp3yg3f5hRxb/STCEO?node-id=1-11">Art</a>
+            <div class="dropdown">
+                <a href="#">StoryMaps</a>
+                <div class="dropdown-content">
+                    <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">COVID19's Spreading Path in Louisiana</a>
+                    <a href="https://storymaps.arcgis.com/stories/another-storymap-link">COVID19 Pattern Overview in Louisiana</a>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
+    </div>
     </header>
+
+<style>
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+    }
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #f8f8f8;
+        padding: 20px 0;
+        border-bottom: 1px solid #e7e7e7;
+    }
+    header h1 {
+        margin: 0;
+    }
+    nav {
+        display: flex;
+        gap: 15px;
+    }
+    nav a {
+        text-decoration: none;
+        color: #333;
+        padding: 10px;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+    nav a:hover {
+        background-color: #ddd;
+    }
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+    }
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+</style>
+
+
+
+
+    
   
 
     <style>
