--- a/index.html
+++ b/index.html
@@ -53,50 +53,24 @@
 </head>
 <body>
     <header>
-    <div class="container">
-        <h1>Xinhui Yang</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="https://www.figma.com/proto/7qexKxLzNiWp3yg3f5hRxb/STCEO?node-id=1-11">Art</a>
-            <div class="dropdown">
-                <a href="#">StoryMaps</a>
-                <div class="dropdown-content">
-                    <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">COVID19's Spreading Path in Louisiana</a>
-                    <a href="https://storymaps.arcgis.com/stories/another-storymap-link">COVID19 Pattern Overview in Louisiana</a>
+        <div class="container">
+            <h1>Xinhui Yang</h1>
+            <nav>
+                <a href="#">Home</a>
+                <a href="https://www.figma.com/proto/7qexKxLzNiWp3yg3f5hRxb/STCEO?node-id=1-11">Art</a>
+                <div class="dropdown">
+                    <a href="#">Storymaps</a>
+                    <div class="dropdown-content">
+                        <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">COVID19 Spread Path in Louisiana</a>
+                        <a href="https://storymaps.arcgis.com/stories/another-storymap-link">COVID19 Pattern Overview</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </div>
+            </nav>
+        </div>
     </header>
 
-<style>
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px;
-    }
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #f8f8f8;
-        padding: 20px 0;
-        border-bottom: 1px solid #e7e7e7;
-    }
-    header h1 {
-        margin: 0;
-    }
-    nav {
-        display: flex;
-        gap: 15px;
-    }
-    nav a {
-        text-decoration: none;
-        color: #333;
-        padding: 10px;
-        border-radius: 5px;
-        transition: background-color 0.3s ease;
-    }
+
+</style>
     nav a:hover {
         background-color: #ddd;
     }
@@ -126,10 +100,8 @@
 </style>
 
 
-
-
     
-  
+    
 
     <style>
     img {
