--- a/index.html
+++ b/index.html
@@ -73,12 +73,8 @@
 
     <style>
     header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #f8f8f8;
-        padding: 20px 0;
-        border-bottom: 1px solid #e7e7e7;
+        color: #333;
+        margin-bottom: 40px;
     }
     header h1 {
         margin: 0;
