--- a/index.html
+++ b/index.html
@@ -51,34 +51,24 @@
         }
     </style>
 </head>
-<body>
-    <header>
-        <div class="container">
-            <h1>Xinhui Yang</h1>
-            <nav>
-                <a href="#">Home</a>
-                <a href="https://www.figma.com/proto/7qexKxLzNiWp3yg3f5hRxb/STCEO?node-id=1-11">Art</a>
-                <div class="dropdown">
-                    <a href="#">Storymaps</a>
-                    <div class="dropdown-content">
-                        <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">COVID19 Spread Path in Louisiana</a>
-                        <a href="https://storymaps.arcgis.com/stories/another-storymap-link">COVID19 Pattern Overview</a>
-                    </div>
+<header>
+    <div class="container">
+        <h1>Xinhui Yang</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="https://www.figma.com/proto/7qexKxLzNiWp3yg3f5hRxb/STCEO?node-id=1-11">Art</a>
+            <div class="dropdown">
+                <a href="#">StoryMaps</a>
+                <div class="dropdown-content">
+                    <a href="https://storymaps.arcgis.com/stories/1e6162a478074e819b295a0cdb89a1d4">COVID19 Spread Path in Louisiana</a>
+                    <a href="https://storymaps.arcgis.com/stories/another-storymap-link">COVID19 Pattern Overview</a>
                 </div>
-            </nav>
-        </div>
-    </header>
+            </div>
+        </nav>
+    </div>
+</header>
 
-
-
-    <style>
-    header {
-        color: #333;
-        margin-bottom: 40px;
-    }
-    header h1 {
-        margin: 20;
-    }
+<style>
     .dropdown {
         position: relative;
         display: inline-block;
