--- a/index.html
+++ b/index.html
@@ -69,36 +69,6 @@
 </header>
 
 <style>
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px;
-    }
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #f8f8f8;
-        padding: 20px 0;
-        border-bottom: 1px solid #e7e7e7;
-    }
-    header h1 {
-        margin: 0;
-    }
-    nav {
-        display: flex;
-        gap: 15px;
-    }
-    nav a {
-        text-decoration: none;
-        color: #333;
-        padding: 10px;
-        border-radius: 5px;
-        transition: background-color 0.3s ease;
-    }
-    nav a:hover {
-        background-color: #ddd;
-    }
     .dropdown {
         position: relative;
         display: inline-block;
@@ -108,7 +78,7 @@
         position: absolute;
         background-color: #f9f9f9;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 9999; /* Ensure the dropdown is above other content */
+        z-index: 1;
     }
     .dropdown-content a {
         color: black;
