--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 </header>
 
 <style>
+    nav {
+        display: flex;
+        gap: 15px;
+    }
     .dropdown {
         position: relative;
         display: inline-block;
@@ -77,7 +81,7 @@
         display: none;
         position: absolute;
         background-color: #f9f9f9;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.8);
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
     }
     .dropdown-content a {
